navbar controls now functionally hidden with too low z-index when cover_photo is showing and navbar doesn't have class fixed-top

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -1454,6 +1454,10 @@ blockquote {
 	background-color: $nav_bg !important;
 }
 
+.navbar {
+	z-index:1030;
+}
+
 .navbar-dark .navbar-nav .nav-link,
 .usermenu i {
 	color: $nav_icon_colour;
